[project]
dynamic = ["version"]
name = "boj-cli"
authors = [{name="xvzc"}]
description = "Command line interface for BOJ"
readme = "README.md"
requires-python = ">=3.9,<=3.12.9"
dependencies = [
    "beautifulsoup4==4.11.1",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "charset-normalizer==3.0.1",
    "cryptography==39.0.0",
    "idna==3.4",
    "mdurl==0.1.2",
    "selenium==4.28.1",
    "msgpack==1.0.4",
    "pycparser==2.21",
    "Pygments==2.14.0",
    "requests==2.28.2",
    "rich==13.2.0",
    "dependency-injector==4.45.0",
    "six==1.16.0",
    "soupsieve==2.3.2.post1",
    "urllib3==1.26.14",
    "websockets==10.4",
    "PyYAML==5.3.1",
    "webdriver_manager==4.0.2",
]

[project.optional-dependencies]
dev = [
    "pynvim",
    "black",
    "pytest",
    "pytest-mock",
]
test = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = [
    "cffi==1.17.1",
    "setuptools==75.8.0",
    "requests==2.28.2",
    "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[project.scripts]
boj = "boj.entry:cli"

[tool.black]
line-length = 88

