[project]
dynamic = ["version"]
name = "boj-cli"
authors = [{name = "xvzc"}]
description = "Command line interface for BOJ"
readme = "README.md"
requires-python = ">=3.10.17,<3.14"
dependencies = [
    "beautifulsoup4>=4.11.1,<5.0.0",
    "certifi>=2022.12.7,<2023.0.0",
    "cffi>=1.15.1,<2.0.0",
    "charset-normalizer>=3.0.1,<4.0.0",
    "cryptography>=39.0.0,<40.0.0",
    "idna>=3.4,<4.0.0",
    "mdurl>=0.1.2,<0.2.0",
    "selenium>=4.28.1,<5.0.0",
    "msgpack>=1.0.4,<2.0.0",
    "pycparser>=2.21,<3.0.0",
    "Pygments>=2.14.0,<3.0.0",
    "requests>=2.28.2,<3.0.0",
    "rich>=13.2.0,<14.0.0",
    "dependency-injector>=4.45.0,<5.0.0",
    "six>=1.16.0,<2.0.0",
    "soupsieve>=2.3.2.post1,<3.0.0",
    "urllib3>=1.26.14,<2.0.0",
    "websockets>=10.4,<11.0",
    "PyYAML>=5.3.1,<6.0.0,!=5.4.0,!=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pynvim",
    "black",
    "pytest",
    "pytest-mock",
]
test = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = [
    "cffi>=1.17.1,<2.0.0",
    "setuptools>=75.8.0,<76.0.0",
    "requests>=2.28.2,<3.0.0",
    "wheel>=0.45.1,<0.46.0",
]
build-backend = "setuptools.build_meta"

[project.scripts]
boj = "boj.entry:cli"

[tool.black]
line-length = 88
