[project]
dynamic = ["version"]
name = "boj-cli"
authors = [{name = "xvzc"}]
description = "Command line interface for BOJ"
readme = "README.md"
requires-python = ">=3.10.17,<3.14"
dependencies = [
    "beautifulsoup4>=4.11.1,<5.0.0",
    "cryptography>=39.0.0,<40.0.0",
    "selenium>=4.28.1,<5.0.0",
    "requests>=2.28.2,<3.0.0",
    "rich>=13.2.0,<14.0.0",
    "dependency-injector>=4.45.0,<5.0.0",
    "websockets>=10.4,<11.0",
    "PyYAML>=5.3.1,<6.0.0,!=5.4.0,!=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pynvim",
    "black",
    "pytest",
    "pytest-mock",
]
test = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = [
    "cffi>=1.17.1,<2.0.0",
    "setuptools>=75.8.0,<76.0.0",
    "requests>=2.28.2,<3.0.0",
    "wheel>=0.45.1,<0.46.0",
]
build-backend = "setuptools.build_meta"

[project.scripts]
boj = "boj.entry:cli"

[tool.black]
line-length = 88
